--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Memory Game</title>
   </head>
   <body>
+    <div class="container">
+      <h3>Score: <span id="result"></span></h3>
+      <div class="grid"></div>
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
