program the game

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h3>Score: <span id="result"></span></h3>
+      <h3>Score: <span id="result"></span><span id="win-message"></span></h3>
       <div class="grid"></div>
     </div>
     <script src="src/app.js"></script>
